fix: CORS bug running in deploy